--- a/login_register/registerwin.ui
+++ b/login_register/registerwin.ui
@@ -82,7 +82,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>60</x>
@@ -93,7 +93,7 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="ButtonRegister">
       <property name="text">
        <string>注册</string>
       </property>
@@ -113,7 +113,7 @@
      </spacer>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="ButtonQuit">
       <property name="text">
        <string>返回</string>
       </property>
