--- a/meet_room/roomdialog.ui
+++ b/meet_room/roomdialog.ui
@@ -81,6 +81,34 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lb_name">
+        <property name="text">
+         <string>用户名:---</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lb_owner">
+        <property name="text">
+         <string>房主：---</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -179,7 +207,7 @@
        <height>541</height>
       </size>
      </property>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pb_userlist">
       <property name="geometry">
        <rect>
         <x>480</x>
@@ -191,6 +219,28 @@
       <property name="text">
        <string>用户列表</string>
       </property>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>470</y>
+        <width>211</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="inputVolumeLayout"/>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>60</y>
+        <width>411</width>
+        <height>371</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="userListLayout"/>
      </widget>
     </widget>
    </item>
@@ -249,6 +299,13 @@
        <widget class="QPushButton" name="pb_setting">
         <property name="text">
          <string>设置</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pb_unmute">
+        <property name="text">
+         <string>解除静音</string>
         </property>
        </widget>
       </item>
