--- a/mychatroom.ui
+++ b/mychatroom.ui
@@ -221,18 +221,6 @@ image: url(:/tx/8.png);</string>
           </item>
           <item>
            <widget class="QLabel" name="lb_name">
-            <property name="minimumSize">
-             <size>
-              <width>111</width>
-              <height>30</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>30</height>
-             </size>
-            </property>
             <property name="text">
              <string>name</string>
             </property>
@@ -375,66 +363,40 @@ image: url(:/tx/8.png);</string>
        <height>441</height>
       </size>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_3">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
-       <number>0</number>
+     <widget class="QListWidget" name="RoomListWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>20</y>
+        <width>301</width>
+        <height>31</height>
+       </rect>
       </property>
       <item>
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>添加一行</string>
-        </property>
-       </widget>
+       <property name="text">
+        <string>房间号               房主名</string>
+       </property>
+       <property name="font">
+        <font>
+         <family>Franklin Gothic Medium</family>
+         <pointsize>18</pointsize>
+        </font>
+       </property>
       </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="text">
-         <string>插入一行</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_3">
-        <property name="text">
-         <string>删除一行</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="ButtonRefreshRoomList">
-        <property name="text">
-         <string>刷新房间列表</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QListWidget" name="RoomListWidget">
-        <item>
-         <property name="text">
-          <string>房间号               房主名</string>
-         </property>
-         <property name="font">
-          <font>
-           <family>Franklin Gothic Medium</family>
-           <pointsize>18</pointsize>
-          </font>
-         </property>
-        </item>
-       </widget>
-      </item>
-     </layout>
+     </widget>
+     <widget class="QPushButton" name="ButtonRefreshRoomList">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>301</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>刷新房间列表</string>
+      </property>
+     </widget>
     </widget>
    </item>
    <item>
