--- a/login_register/login.ui
+++ b/login_register/login.ui
@@ -78,7 +78,7 @@
      <x>60</x>
      <y>200</y>
      <width>261</width>
-     <height>28</height>
+     <height>30</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -112,6 +112,9 @@
    </layout>
   </widget>
   <widget class="QPushButton" name="ButtonPass">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>250</x>
