--- a/meet_room/roomdialog.ui
+++ b/meet_room/roomdialog.ui
@@ -242,6 +242,29 @@
       </property>
       <layout class="QVBoxLayout" name="userListLayout"/>
      </widget>
+     <widget class="QComboBox" name="audioInputComboBox">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>470</y>
+        <width>191</width>
+        <height>51</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="reCheckBtn">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>470</y>
+        <width>71</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>检测</string>
+      </property>
+     </widget>
     </widget>
    </item>
    <item>
