--- a/mychatroom.ui
+++ b/mychatroom.ui
@@ -54,6 +54,13 @@
        <number>0</number>
       </property>
       <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>多人在线语音聊天室</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -65,13 +72,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pb_title">
-        <property name="text">
-         <string>多人语音聊天室</string>
-        </property>
-       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="pb_min">
@@ -140,6 +140,9 @@
        <height>70</height>
       </size>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(207, 207, 207);</string>
+     </property>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <property name="leftMargin">
        <number>5</number>
@@ -168,15 +171,14 @@
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-image: url(:/tx/8.png);
-image: url(:/tx/8.png);</string>
+         <string notr="true">background-color: rgb(255, 255, 255);</string>
         </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
          <iconset resource="resource.qrc">
-          <normaloff>:/tx/0.png</normaloff>:/tx/0.png</iconset>
+          <normaloff>:/images/message.ico</normaloff>:/images/message.ico</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -193,32 +195,6 @@ image: url(:/tx/8.png);</string>
         </property>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <widget class="QComboBox" name="cbx_state">
-            <property name="minimumSize">
-             <size>
-              <width>50</width>
-              <height>30</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>60</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <item>
-             <property name="text">
-              <string>在线</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>离线</string>
-             </property>
-            </item>
-           </widget>
-          </item>
           <item>
            <widget class="QLabel" name="lb_name">
             <property name="text">
@@ -322,40 +298,6 @@ image: url(:/tx/8.png);</string>
     </widget>
    </item>
    <item>
-    <widget class="QToolButton" name="tb_friend">
-     <property name="minimumSize">
-      <size>
-       <width>100</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <family>微软雅黑</family>
-       <pointsize>12</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>房间列表</string>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-     <property name="autoRaise">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="QWidget" name="wdg_stack" native="true">
      <property name="minimumSize">
       <size>
@@ -363,23 +305,26 @@ image: url(:/tx/8.png);</string>
        <height>441</height>
       </size>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(245, 245, 245);</string>
+     </property>
      <widget class="QListWidget" name="RoomListWidget">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>20</y>
+        <y>50</y>
         <width>301</width>
-        <height>41</height>
+        <height>32</height>
        </rect>
       </property>
       <item>
        <property name="text">
-        <string>房间号     房主名</string>
+        <string>房间号         房主名</string>
        </property>
        <property name="font">
         <font>
          <family>Franklin Gothic Medium</family>
-         <pointsize>18</pointsize>
+         <pointsize>15</pointsize>
         </font>
        </property>
       </item>
@@ -390,13 +335,18 @@ image: url(:/tx/8.png);</string>
         <x>0</x>
         <y>0</y>
         <width>301</width>
-        <height>23</height>
+        <height>41</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(239, 221, 129);</string>
       </property>
       <property name="text">
        <string>刷新房间列表</string>
       </property>
      </widget>
+     <zorder>ButtonRefreshRoomList</zorder>
+     <zorder>RoomListWidget</zorder>
     </widget>
    </item>
    <item>
@@ -412,6 +362,9 @@ image: url(:/tx/8.png);</string>
        <width>16777215</width>
        <height>41</height>
       </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(228, 228, 228);</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <property name="leftMargin">
@@ -445,42 +398,7 @@ image: url(:/tx/8.png);</string>
         </property>
         <property name="icon">
          <iconset resource="resource.qrc">
-          <normaloff>:/images/color.png</normaloff>:/images/color.png</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>30</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="autoDefault">
-         <bool>true</bool>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="ButtonSetting">
-        <property name="minimumSize">
-         <size>
-          <width>30</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>30</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="resource.qrc">
-          <normaloff>:/images/sett.png</normaloff>:/images/sett.png</iconset>
+          <normaloff>:/images/creatRoom.png</normaloff>:/images/creatRoom.png</iconset>
         </property>
         <property name="iconSize">
          <size>
